<resources>
    <string name="app_name">Music Player2</string>
    <string name="todo">TODO</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_unique_id">Enter your unique Id</string>
    <string name="signup">Sign Up</string>
    <string name="enter_password">Enter Password</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account_sign_in">Don\'t have an Account Sign In</string>
    <string name="enter_unique_id">Enter Unique Id</string>
    <string name="i_accept_all_terms_and_condition">I accept all terms and condition</string>
    <string name="sign_in">Sign In</string>
    <string name="song_author">Song Author</string>
    <string name="song_name">Song name</string>
</resources>